# hotdb

./: .gitignore  LICENSE  README.md  hotdb.cabal
src/HotDB/Core/: Commit.hs  JsonUtils.hs  Node.hs  Operation.hs  Path.hs  Snapshot.hs  Transformation.hs
tests/: NodeTest.hs  OperationTest.hs  SCInstances.hs  TransformationTest.hs  Util.hs  test.hs
